fixed image alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,12 +3,15 @@
 
 }
 .logo{
-  max-width: 100%;
   height: 200px;
+}
+.mobile-pic img {
+  width: 100%;
 }
 .logo-box{
   width: 25%;
   margin: 0 auto;
+  background-color:
 }
 
 h1{
@@ -16,6 +19,7 @@ h1{
   font-size: 55px;
   color: #8BB1D4;
   text-align: center;
+  background-color: black;
 }
 .tagline h4{
   text-align: center;
@@ -40,8 +44,10 @@ h1{
 }
 @media(max-width: 786px){
   .mobile-pic{
-    margin: 0 auto;
+    margin-left: 150px;;
     text-align: center;
+    height: 100%;
+    width: 100%%;
   }
   .about {
     display: none;
